@@ -1,12 +1,9 @@
 package faang.school.projectservice.service.invitation;
 
-import faang.school.projectservice.controller.StageInvitationController;
 import faang.school.projectservice.dto.invitation.AcceptInvitationRequest;
 import faang.school.projectservice.dto.invitation.AcceptInvitationResponse;
 import faang.school.projectservice.dto.invitation.DeclineInvitationRequest;
 import faang.school.projectservice.dto.invitation.DeclineInvitationResponse;
-import faang.school.projectservice.dto.invitation.GetUserInvitationsRequest;
-import faang.school.projectservice.dto.invitation.GetUserInvitationsResponse;
 import faang.school.projectservice.dto.invitation.InvitationDto;
 import faang.school.projectservice.dto.invitation.SendInvitationRequest;
 import faang.school.projectservice.dto.invitation.SendInvitationResponse;
@@ -18,21 +15,23 @@ import faang.school.projectservice.model.stage_invitation.StageInvitationStatus;
 import faang.school.projectservice.repository.StageInvitationRepository;
 import faang.school.projectservice.repository.StageRepository;
 import faang.school.projectservice.repository.TeamMemberRepository;
+import faang.school.projectservice.service.invitation.filter.InvitationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
 public class StageInvitationService {
     private final StageInvitationRepository repository;
-    private final StageInvitationController controller;
     private final StageInvitationMapper mapper;
     private final StageRepository stageRepository;
     private final TeamMemberRepository teamMemberRepository;
+
+    private final List<InvitationFilter> filters;
 
     @Transactional
     public SendInvitationResponse sendInvitation(SendInvitationRequest request) {
@@ -47,6 +46,7 @@ public class StageInvitationService {
 
         StageInvitation stageInvitation = mapper.toStageInvitation(request);
         stageInvitation.setStatus(StageInvitationStatus.PENDING);
+        repository.save(stageInvitation);
         return mapper.toSendInvitationResponse(stageInvitation);
     }
 
@@ -73,6 +73,7 @@ public class StageInvitationService {
 
         stageInvitation.setStatus(StageInvitationStatus.REJECTED);
         stageInvitation.setDescription(request.description());
+        repository.save(stageInvitation);
 
         return DeclineInvitationResponse.builder()
                 .id(stageInvitation.getId())
@@ -81,23 +82,24 @@ public class StageInvitationService {
                 .build();
     }
 
-    public GetUserInvitationsResponse getUserInvitations(GetUserInvitationsRequest request) {
-        List<StageInvitation> invitations = repository.findAll().stream()
-                .filter(invitation -> invitation.getInvited().equals(request.invited()))
-                .collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<InvitationDto> getFilteredInvitations(InvitationDto filter) {
+        Stream<StageInvitation> invitationsStream = repository.findAll().stream();
 
-        List<InvitationDto> invitationDtos = invitations.stream()
+        for (InvitationFilter filterHandler : filters) {
+            if (filterHandler.isApplicable(filter)) {
+            }
+            invitationsStream = filterHandler.apply(invitationsStream, filter);
+        }
+
+        return invitationsStream
                 .map(mapper::toInvitationDto)
-                .collect(Collectors.toList());
-
-        return GetUserInvitationsResponse.builder()
-                .invitations(invitationDtos)
-                .build();
+                .toList();
     }
 
-    private StageInvitation validatePendingInvitation(Long invitationId){
+    private StageInvitation validatePendingInvitation(Long invitationId) {
         StageInvitation stageInvitation = repository.findById(invitationId)
-                .orElseThrow(()-> new DataValidationException("Invitation not found"));
+                .orElseThrow(() -> new DataValidationException("Invitation not found"));
 
         if (!StageInvitationStatus.PENDING.equals(stageInvitation.getStatus())) {
             throw new IllegalStateException("Only pending invitations can be accepted or rejected");
